--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="sobre-mi">
       <h2>Sobre Mí</h2>
       <img src="./IMG/Adrian RG.png" alt="Foto de perfil de Adrián Requena González" width="150">
-      <p>¡Hola! Soy Adrián Requena González, tengo 19 años y soy de Almería. Soy un apasionado por la informática y, sobre todo, por la Planificación y Administración de redes 🛜.</p>
+      <p>¡Hola a tod@s! Soy Adrián Requena González, tengo 19 años y soy de Almería. Soy un apasionado por la informática y, sobre todo, por la Planificación y Administración de redes 🛜.</p>
     </section>
 
     <section id="habilidades">
